--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ ul {
   .order-link:hover {
     background-color: #71240f; }
 
-.button_color_black {
+.order-link_color_black {
   background-color: rgba(0, 0, 0, 0.31);
   cursor: pointer;
   border: rgba(0, 0, 0, 0.31); }
@@ -178,6 +178,12 @@ ul {
   .sidebar__dot:hover {
     background-color: #71240f; }
 
+.sidebar__circle-active {
+  border-color: #fff; }
+
+.sidebar__dot-active {
+  background-color: #71240f; }
+
 .sidebar__circle:hover {
   border-color: #ffffff; }
 
@@ -202,7 +208,8 @@ ul {
   padding-top: 10px; }
 
 .header__logo {
-  margin-right: auto; }
+  margin-right: auto;
+  display: block; }
 
 .nav {
   margin-right: 0.9375rem; }
@@ -295,8 +302,7 @@ ul {
   font-size: 4.5rem;
   font-weight: 300;
   line-height: 1.42;
-  margin: 0;
-  padding-top: 60px; }
+  margin: 0; }
 
 .hero__description-text {
   color: #fff;
@@ -327,7 +333,6 @@ ul {
 
 .section__title--best {
   color: #2f3234;
-  padding: 0;
   margin-bottom: 3.75rem; }
 
 .best__content {
@@ -335,13 +340,13 @@ ul {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 90px;
-  margin-top: 60px;
   width: 100%; }
 
 .best__content--item {
   width: 50%;
   margin: 0;
-  text-align: center; }
+  text-align: center;
+  margin: 10px 10px; }
 
 .best__description--title {
   font-family: 'lifehackmedium';
