--- a/scss/section/_best.scss
+++ b/scss/section/_best.scss
@@ -11,20 +11,20 @@
 
 .section__title--best {
     color:#2f3234;
-    padding: 0;
     margin-bottom: rem(60px);
 }
 
 .best__content {
 display: flex;
 margin-bottom: 90px;
-margin-top: 60px;
 width: 100%; }
 
 .best__content--item {
 width: 50%;
 margin: 0 ;
-text-align: center; }
+text-align: center;
+margin: 10px 10px;
+}
 
 .best__description--title{
 font-family: 'lifehackmedium';
