--- a/scss/section/_hero.scss
+++ b/scss/section/_hero.scss
@@ -16,6 +16,7 @@
 
 .header__logo{
     margin-right: auto;
+    display: block;
 }
 
 .nav{
@@ -92,7 +93,6 @@
     font-weight: 300;
     line-height: 1.42;
     margin: 0;
-    padding-top: 60px;
 }
 
 .hero__description-text{
