--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,9 @@ ul {
   font-family: 'lifehackmedium';
   font-size: 24px;
   padding-bottom: 10px;
-  line-height: 1.42; }
+  line-height: 1.42;
+  margin-top: 0px;
+  margin-bottom: 0px; }
 
 .best__description--text {
   font-family: 'ubuntulight';
