--- a/scss/section/_best.scss
+++ b/scss/section/_best.scss
@@ -31,6 +31,8 @@ font-family: 'lifehackmedium';
 font-size: 24px;
 padding-bottom: 10px;
 line-height: 1.42;
+margin-top: 0px;
+margin-bottom: 0px;
 }
 
 .best__description--text {
