--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    
     font-family: 'ubuntu', Arial, sans-serif;
     line-height: 1.42;
     color: $dark;
@@ -15,6 +15,12 @@ body {
 
 body, html {
     height: 100%;
+}
+
+html{
+    font-size: 16px;
+    @include tablets{font-size: 14px}
+    @include phones{font-size: 12px}
 }
 
 ul{
@@ -36,3 +42,4 @@ ul{
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+a{text-decoration: none}
