--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,13 @@
+//breakpoints
+$phones : 480px;
+$tablets : 768px;
+
+
+
 //config
 @import "config/_variables.scss";
 @import "config/_mixins.scss";
-
+@import "config/_media.scss";
 //base
 @import "layout/_fonts.scss";
 @import "layout/_base.scss";
@@ -11,3 +17,8 @@
 @import "section/_hero.scss";
 @import "section/_best.scss";
 @import "section/_review.scss";
+@import "section/_team.scss";
+@import "section/_contacts.scss";
+@import "section/_order.scss";
+@import "section/_menu.scss";
+
