--- a/scss/section/_best.scss
+++ b/scss/section/_best.scss
@@ -1,6 +1,6 @@
 .best {
     
-  background-image: url("../img/second_page/bg.jpg");
+  background-image: url("../img/best_page/bg.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
@@ -16,28 +16,34 @@
 
 .best__content {
 display: flex;
-margin-bottom: 90px;
-width: 100%; }
+margin-bottom: rem(90px);
+width: 100%;
+@include tablets {flex-direction: column;
+  align-items: center;
+  justify-content:center;} }
 
 .best__content--item {
 width: 50%;
 margin: 0 ;
 text-align: center;
-margin: 10px 10px;
+margin: rem(10px) rem(10px);
+@include tablets {flex-direction: row;
+ } 
 }
-
+.best__description{@include tablets {flex-direction: row;
+} }
 .best__description--title{
 font-family: 'lifehackmedium';
-font-size: 24px;
-padding-bottom: 10px;
+font-size: rem(24px);
+padding-bottom: rem(10px);
 line-height: 1.42;
-margin-top: 0px;
-margin-bottom: 0px;
+margin-top: rem(0px);
+margin-bottom: rem(0px);
 }
 
 .best__description--text {
 font-family: 'ubuntulight';
-font-size: 14px;
+font-size: rem(14px);
 line-height: 1.42;
 color: #838281;
  }
