--- a/scss/section/_hero.scss
+++ b/scss/section/_hero.scss
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url("../img/first_page/bg.jpg");
+    background-image: url("../img/hero_page/bg.jpg");
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
@@ -11,9 +11,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
+    padding-top: rem(10px);
 }
-
+.logo{
+    display: block;
+}
 .header__logo{
     margin-right: auto;
     display: block;
@@ -35,8 +37,8 @@
         display: inline-block;
         vertical-align: middle;
         content: ' ';
-        @include circle(5px, #fff);
-        margin: 0 12px;
+        @include circle(rem(5px), #fff);
+        margin: 0 rem(12px);
     }
     &:last-child:after {
         display: none;
@@ -45,7 +47,7 @@
 
 .nav__link{
     color:#fff;
-    font-size: 13px;
+    font-size: rem(13px);
     font-weight: 400;
     line-height: 1.42;
     text-transform: uppercase;
@@ -62,9 +64,9 @@
 .hero__container{
     height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+  
 }
 
 .hero__content {
@@ -73,12 +75,24 @@
     flex-wrap: wrap;
     flex-grow: 1;
     align-items: center;
-    padding-bottom: 15px;
+    padding-bottom: rem(15px);
+    @include tablets {flex-direction: column;
+        align-items: center;
+        justify-content:center;}
+        @include phones {flex-direction: column;
+            align-items: center;
+            justify-content:center;}
 }
 
 .hero__img, .hero__description{
     flex-basis: 50%;
     display: flex;
+    @include tablets {flex-direction: column;
+        align-items: center;
+        justify-content:center;}
+        @include phones {flex-direction: column;
+            align-items: center;
+            justify-content:center;}
 }
 
 .hero__description{
