--- a/scss/section/_review.scss
+++ b/scss/section/_review.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    padding: 0 20px;
+    padding: 0 rem(20px);
     background-color: rgba(20, 20, 20, 0.8);
     opacity: 0;
     transform: scale(0.8);
@@ -36,6 +36,8 @@
 .review__item{
     width: 25%;
     height: 50%;
+    @include tablets{width: 50%;
+    height:25%}
 }
 .review__img{
     width: 100%;
@@ -57,15 +59,15 @@ filter: gray;
 
 .review__title {
     font-family: 'gagalinregular';
-    font-size: 14px;
+    font-size: rem(14px);
     color: #fff;
-    margin-bottom: 20px; }
+    margin-bottom: rem(20px); }
 
     .review__description {
         font-family: 'ubuntulight';
-        font-size: 14px;
+        font-size: rem(14px);
         font-weight: 300;
         line-height: 1.42;
         color: #fff;
-        margin-bottom: 20px;
+        margin-bottom: rem(20px);
         overflow: hidden;}    
