--- a/css/main.css
+++ b/css/main.css
@@ -844,7 +844,7 @@ a {
   -ms-flex-align: center;
   align-items: center; }
 
-.map {
+.contacts {
   background-image: url("../img/contacts_page/bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -857,7 +857,7 @@ a {
   display: flex;
   overflow: hidden; }
 
-.footer_container {
+.footer__container {
   width: 57.5rem;
   margin: 0 auto; }
 
@@ -907,16 +907,14 @@ a {
   font-family: 'ubunturegular';
   font-size: 0.875rem;
   text-decoration: none;
-  font-weight: 700;
-  margin: 0rem 0rem 0rem 5rem; }
+  font-weight: 700; }
 
 .footer__adress {
   color: #fff;
   font-family: 'ubuntulight';
   font-size: 0.875rem;
   font-weight: 300;
-  line-height: 1.5rem;
-  margin: 0.625rem 0rem 0rem 5rem;
+  line-height: 0;
   font-size: 0.875rem; }
 
 .footer__right {
@@ -944,19 +942,9 @@ a {
   margin-right: 1.25rem; }
 
 .social__link {
-  content: "";
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background: transparent;
-  width: 1.4375rem;
-  height: 1.4375rem; }
+  display: flex; }
 
 .social__img-vk {
   display: block;
@@ -1005,6 +993,69 @@ a {
   -webkit-transition: .5s;
   -o-transition: .5s;
   transition: .5s; }
+
+.foot__contacts {
+  float: right;
+  width: 25%;
+  margin: 25px 0 20px; }
+
+.soc__list {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.soc__list .soc__item {
+  display: inline-block;
+  margin: 0;
+  padding: 0; }
+
+.soc__list .soc__item:nth-child(1) a {
+  background-position: 0 0; }
+
+.soc__list .soc__item:nth-child(1) a:hover {
+  background-position: 0px 50px;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s; }
+
+.soc__list .soc__item:nth-child(4) a {
+  background-position: 50px 0; }
+
+.soc__list .soc__item:nth-child(4) a:hover {
+  background-position: 50px 50px;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s; }
+
+.soc__list .soc__item:nth-child(3) a {
+  background-position: 100px 0; }
+
+.soc__list .soc__item:nth-child(3) a:hover {
+  background-position: 100px 50px;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s; }
+
+.soc__list .soc__item:nth-child(2) a {
+  background-position: 150px 0; }
+
+.soc__list .soc__item:nth-child(2) a:hover {
+  background-position: 150px 50px;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s; }
+
+.soc__list .soc__item .soc__link {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  background: url(../img/contacts_page/sprite.svg);
+  overflow: hidden;
+  text-indent: 1000px;
+  white-space: nowrap; }
 
 .order {
   background-image: url("../img/order_page/bg.jpg");
