--- a/scss/layout/_adjustment.scss
+++ b/scss/layout/_adjustment.scss
@@ -12,7 +12,7 @@ height: 100%;
 
 .container{
     width: 95%;
-    max-width: 940px;
+    max-width: rem(940px);
     margin: 0 auto;
     display: flex;
     justify-content: center;
