--- a/scss/section/_contacts.scss
+++ b/scss/section/_contacts.scss
@@ -24,33 +24,29 @@
        
       
       .footer__wrapper {
-      
+        margin-top: 6px;
         display: flex;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
         justify-content: space-between;
-        height: 100%; }
+        height: 100%;
+        @include tablets {
+          align-items: center;
+          flex-direction: column;
+      } }
        
       
-      .socials {
-        display: flex;
-        margin: rem(15px) rem(60px) rem(0px) rem(0px); }
+      
 
                  
-         .footer__phone:before {
+         .footer__contacts--phone:before {
           content: "";
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
+         display: flex;
           width: rem(17px);
           height: rem(17px);
           background: url("../img/contacts_page/tel.png") center center no-repeat;
           margin-right: rem(10px);
       }
-      .footer__phone {
-        display: -webkit-box;
-        display: -ms-flexbox;
+      .footer__contacts--phone {
+      
         display: flex;
         -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
@@ -67,155 +63,47 @@
       
       
       
-      .footer__adress {
+      .footer__contacts--adress {
         color: #fff;
         font-family: 'ubuntulight';
         font-size: 0.875rem;
         font-weight: 300;
-        line-height: 0;
-        
         font-size: rem(14px); }
         
-        .footer__right {
-           display: flex;
-          -webkit-box-align: center;
-          -ms-flex-align: center;
-          align-items: center;
-          -webkit-box-pack: end;
-          -ms-flex-pack: end;
-          justify-content: flex-end;
-          width: 50%;
-          min-height: 3.75rem;
-      }
+      
 
-      .social__list {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-    }
 
-    .social__item {
-      margin-right: 1.25rem;
+.footer__social {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  @include phones {
+      align-items: center;
   }
-
-  .social__link {   
-    display: flex;   
+}
+.footer__social--list {
+  display: flex;
 }
 
-.social__img-vk {
-  display: block;
-  width: 1.4375rem;
-  height: 1.4375rem;
-  background: url(../img/contacts_page/sp1.png) -0.625rem 0.25rem no-repeat;
-}
-     
-.social__img-vk:hover {
-  background: url(../img/contacts_page/sp2.png) -0.625rem 0.25rem no-repeat;
-  -webkit-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;}
-
-  .social__img-fb {
-    display: block;
-    width: 1.4375rem;
-    height: 1.4375rem;
-    background: url(../img/contacts_page/sp1.png) -0.625rem -1.4375rem no-repeat;}
-
-    .social__img-fb:hover {
-      background: url(../img/contacts_page/sp2.png) -0.625rem -1.4375rem no-repeat;
-      -webkit-transition: .5s;
-      -o-transition: .5s;
-      transition: .5s;
+.footer__social--item {
+  font-size: 0;
+  margin-left: rem(15px);
+  &:first-child {
+      margin-left: 0;
   }
+}
 
-  .social__img-inst {
-    display: block;
-    width: 1.4375rem;
-    height: 1.4375rem;
-    background: url(../img/contacts_page/sp1.png) -0.5625rem -3.3125rem no-repeat;
+
+
+.footer__social--icon {
+  width: rem(20px);
+  height: rem(20px);
+  fill: #fff;
+  transition: .3s;
+  opacity: .4;
+  &:hover {
+      opacity: 1;
   }
-
-    .social__img-inst:hover {
-      background: url(../img/contacts_page/sp2.png) -0.5625rem -3.3125rem no-repeat;
-      -webkit-transition: .5s;
-      -o-transition: .5s;
-      transition: .5s;
-  }
-
-  .social__img-tw {
-    display: block;
-    width: 1.4375rem;
-    height: 1.4375rem;
-    background: url(../img/contacts_page/sp1.png) -0.5625rem -5rem no-repeat;}
-
-    .social__img-tw:hover {
-      background: url(../img/contacts_page/sp2.png) -0.5625rem -5rem no-repeat;
-      -webkit-transition: .5s;
-      -o-transition: .5s;
-      transition: .5s;
-  }
-
-  .foot__contacts {
-    float: right;
-    width: 25%;
-    margin: 25px 0 20px;
-}
-
-.soc__list {
-  display: block;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.soc__list .soc__item {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.soc__list .soc__item:nth-child(1) a {
-  background-position: 0 0;
-}
-.soc__list .soc__item:nth-child(1) a:hover {
-  background-position: 0px 50px;
-  transition: .2s;
-}
-
-.soc__list .soc__item:nth-child(4) a {
-  background-position: 50px 0;
-}
-.soc__list .soc__item:nth-child(4) a:hover {
-  background-position: 50px 50px;
-  transition: .2s;
-}
-.soc__list .soc__item:nth-child(3) a {
-  background-position: 100px 0;
-}
-.soc__list .soc__item:nth-child(3) a:hover {
-  background-position: 100px 50px;
-  transition: .2s;
-}
-.soc__list .soc__item:nth-child(2) a {
-  background-position: 150px 0;
-}
-.soc__list .soc__item:nth-child(2) a:hover {
-  background-position: 150px 50px;
-  transition: .2s;
-}
-
-
- .soc__list .soc__item .soc__link{
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  width: 50px;
-  height: 50px;
-  background: url(../img/contacts_page/sprite.svg);
-  overflow: hidden;
-  text-indent: 1000px;
-  white-space: nowrap;
 }
